--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "uni-plan",
-  "appid": "",
+  "appid": "wx7f33829adf038545",
   "description": "",
   "versionName": "1.0.0",
   "versionCode": 1,
